--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@bidve1/blogcraft-common": "^1.0.7",
+    "@google/generative-ai": "^0.13.0",
     "axios": "^1.6.8",
     "date-fns": "^3.6.0",
     "jwt-decode": "^4.0.0",
